{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "3d7923ff-aa9f-46e9-b1de-f51addce02c6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "28c0646c-6e8d-42f7-9b53-39ea945646ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e8ed2281-5ac8-4ad4-b231-0e69f1c42727",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "14b0fa8d-80e2-4eb0-b4e2-68201db57738",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a1e43c1d-d861-4a46-a08f-5c2b732dc927",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d2ab81e8-a23a-4ea0-a678-1e759f3af57a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9d83651f-8a21-4abb-b713-9070f05ab927",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "2ba559ae-4ace-4c4e-85ff-45cf2588790f",
            "actions": [
                {
                    "name": "Clobbopus",
                    "type": "Button",
                    "id": "544e9bcd-c092-4d34-bf90-fa30a4c7f6f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clauncher",
                    "type": "Button",
                    "id": "8076fa3c-2116-4f2a-93ec-34770cacf6d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magby",
                    "type": "Button",
                    "id": "fc80d99b-aaee-4f82-a8c6-b6d1a56ba14e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseWeapon",
                    "type": "Button",
                    "id": "824b9ec9-9294-4d68-bb0b-b2b3631187c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd83c3bb-52b4-4ae3-93a0-723bb48fd4cf",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clobbopus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "967eee28-457d-409d-bcde-2c66e902b0cc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clauncher",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ce4286a-b264-43ee-ab60-5bcd9cdc857e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magby",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c356480e-7dd8-42eb-a75d-34c9d7f8551e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "99d0512c-f632-4a5a-8d60-b8563a1129cf",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8e793b40-5b8e-4119-a6df-88f7607001cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "242a16ab-253e-4322-a855-141f665bb0e9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}